<resources>
    <string name="github_oauth_token"><!-- Insert OAuth Token --></string>

    <string name="app_name">KnightsOfLambdaCalculus</string>

    <string name="hello_world">Hello world!</string>
    <string name="searching_for_label">Searching for</string>
    <string name="action_settings">Settings</string>
    <string name="do_rx_stuff">Do Rx stuff</string>
    <string name="username">Username</string>
    <string name="title_activity_hello_world">HelloWorldActivity</string>
    <string name="simple">Simple example</string>
    <string name="title_activity_hello_world2">HelloWorld2</string>
    <string name="simpler">Simpler</string>
    <string name="title_activity_operators">OperatorsActivity</string>
    <string name="operators">Operators</string>
    <string name="github">GitHub</string>
    <string name="title_activity_git_hub">GitHubActivity</string>
    <string name="title_activity_git_hub2">GitHub2Activity</string>
    <string name="textwatcher">Text watcher</string>
</resources>
