<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".MainActivity">

    <Button
        android:id="@+id/button_simple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simple"/>

    <Button
        android:id="@+id/button_simpler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simpler"/>

    <Button
        android:id="@+id/button_operators"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/operators"/>

    <Button
        android:id="@+id/button_textwatcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textwatcher"/>
    <Button
        android:id="@+id/button_github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github"/>
</LinearLayout>
